Project text 추가

--- a/index.html
+++ b/index.html
@@ -266,22 +266,30 @@
                 <h4>Team Project - HomeBab</h4>
                 <hr>
                 <p>
-                  <li>프로젝트 기간 : 2022.07 ~ 2022.08</li>
+                  <li><strong>프로젝트 기간</strong> : 2022.07 ~ 2022.08</li>
                 </p>
                 <hr>
                 <p>
-                  <li>프로젝트 방식 : Jsp</li>
+                  <li><strong>프로젝트 방식</strong> : Jsp</li>
                 </p>
                 <p>
-                  <li>언어 : Html,&nbsp; Java11,&nbsp; SQL,&nbsp; JavaScript(jquery),&nbsp; MyBatis, JSTL</li>
+                  <li><strong>언어</strong> : Html,&nbsp; Java11,&nbsp; SQL,&nbsp; JavaScript(jquery),&nbsp; MyBatis, JSTL</li>
                 </p>
                 <p>
-                  <li>Tools : Eclipse,&nbsp; Visualstudiocode,&nbsp; Gitlab,&nbsp; SqlDeveloper</li>
+                  <li><strong>Tools</strong> : Eclipse,&nbsp; Visualstudiocode,&nbsp; Gitlab,&nbsp; SqlDeveloper</li>
                 </p>
                 <hr>
                 <p>
                   [프로젝트 설명]<br>
-                  사먹는 음식에 질린 홈밥러들에게 레시피를 제공하는 커뮤니티 사이트
+                  사먹는 음식에 질린 홈밥러들에게 레시피를 제공하는 커뮤니티 사이트<br>
+                  <li><strong>개발 인원</strong> : 7명</li>
+                  <li><strong>프로젝트 목표</strong> : GitLab을 사용하여 프로젝트 형상관리 및 협업을 통한 문제해결 및 Jsp / Java / Ajax / Jquery / MVC패턴 숙련</li>
+                  <li><strong>공통 역할</strong> : 기획(whimsical) / DB설계(DA#5) / UI설계(figma, bootstrap) / Git형상관리(gitlab)</li>
+                  <li><strong>구현 기능</strong><br></li>
+                  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;사용자 : 회원가입 / 로그인 / 마이페이지 / 건의사항 / 자유게시판 / 레시피관리 / 댓글</p>
+                  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;관리자 : 로그인 / 회원 관리 / 공지사항 관리/ 건의사항 관리 / 전체 게시글 관리 / 블랙리스트 및 악성유저관리</p>
+                  <li><strong>담당 기능</strong><br></li>
+                  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;사용자 : 레시피 관리 / 댓글 - 기여도 100%</p>
                 </p>
               </div>
             </div>
@@ -293,23 +301,48 @@
                 <h4>Team Project - ChickenStock</h4>
                 <hr>
                 <p>
-                  <li>프로젝트 기간 : 2022.08 ~ 2022.09</li>
+                  <li><strong>프로젝트 기간</strong> : 2022.08 ~ 2022.09</li>
                 </p>
                 <hr>
                 <p>
-                  <li>프로젝트 방식 : Spring-framwork (boot 2.7.3)</li>
+                  <li><strong>프로젝트 방식</strong> : Spring-framwork (boot 2.7.3)</li>
                 </p>
                 <p>
-                  <li>언어 : Html,&nbsp; Java11,&nbsp; SQL,&nbsp; JavaScript(jquery),&nbsp; MyBatis</li>
+                  <li><strong>언어</strong> : Html,&nbsp; Java11,&nbsp; SQL,&nbsp; JavaScript(jquery),&nbsp; MyBatis</li>
                 </p>
                 <p>
-                  <li>Tools : IntelliJ,&nbsp; Visualstudiocode,&nbsp; Gitlab,&nbsp; SqlDeveloper</li>
+                  <li><strong>Tools</strong> : IntelliJ,&nbsp; Visualstudiocode,&nbsp; Gitlab,&nbsp; SqlDeveloper</li>
                 </p>
                 <hr>
                 <p>
                   [프로젝트 설명]<br>
                   치킨 프랜차이즈 회사 내의 가맹점과 본사의 유통을 간편하고 쉽게 파악할 수 있는 프로그램
+                  <li><strong>개발 인원</strong> : 6명</li>
+                  <li><strong>프로젝트 목표</strong> : GitLab을 사용하여 프로젝트 형상관리 및 협업을 통한 문제해결 및 Spring boot / Java / Ajax / Jquery / MVC패턴 숙련</li>
+                  <li><strong>공통 역할</strong> : 기획(whimsical) / DB설계(DA#5) / UI설계(figma, bootstrap) / Git형상관리(gitlab)</li>
+                  <li><strong>구현 기능</strong><br></li>
+                  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;가맹점 : 로그인 / 예치금관리 / 품목관리 / 발주관리 / 입고관리 / 반품관리 / 세금계산서 / 거래명세서 / 1:1 문의사항 </p>
+                  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;관리자 : 로그인 / 가맹점관리 / 예치금관리 / 입고관리 / 출고관리 / 반품관리 / 세금계산서 / 거래명세서 / 공지사항 / 1:1 문의사항 / 관리자메뉴</p>
+                  <li><strong>담당 기능</strong><br></li>
+                  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;가맹점 : 예치금관리 / 1:1 문의 기여도 100%</p>
+                  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;관리자 : 예치금관리 / 1:1 문의 / 공지사항 / 가맹점관리 기여도 100%</p>
                 </p>
+                <hr>
+                <h5>WBS</h5>
+                <img src="assets/img/WBS.png">
+                <hr>
+                <h5>USECASE</h5><br>
+                <p><strong>담당 기능</strong> : 예치금관리 / 1:1 문의 / 공지사항 / 가맹점관리</p><br>
+                <img src="assets/img/USECASE.png">
+                <hr>
+                <h5>ERD (논리 데이터 베이스 모델)</h5>
+                <img src="assets/img/ERD.png">
+                <hr>
+                <h5>단위 업무 흐름도</h5><br>
+                <p><strong>담당 기능</strong> : 예치금관리 / 1:1 문의 / 공지사항 / 가맹점관리</p><br>
+                <img src="assets/img/Whimsical.JPG">
+                <hr>
+                <h5>구현 기능</h5>
               </div>
             </div>
           </div>
