--- a/index.html
+++ b/index.html
@@ -193,14 +193,6 @@
               </div>
             </div>
           </div>
-          <div class="progress">
-              <span class="skill">Mybatis <i class="val">90%</i>
-              </span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </div>
@@ -277,15 +269,23 @@
                 <table>
                   <tbody>
                   <tr>
-                    <th>방식</th>
-                    <td>jsp</td>
-                  </tr>
-                  <tr>
                     <th>언어</th>
-                    <td>Html,&nbsp; Java11,&nbsp; SQL,&nbsp; JavaScript(jquery),&nbsp; MyBatis, JSTL</td>
+                    <td>Java(11),&nbsp; Html/Css, &nbsp;JavaScript</td>
                   </tr>
                   <tr>
-                    <th>Tools</th>
+                    <th>서버</th>
+                    <td>Apache Tomcat 8.5</td>
+                  </tr>
+                  <tr>
+                    <th>DB</th>
+                    <td>Oracle</td>
+                  </tr>
+                  <tr>
+                    <th>프레임 워크</th>
+                    <td>Mybatis</td>
+                  </tr>
+                  <tr>
+                    <th>IDE</th>
                     <td>Eclipse,&nbsp; Visualstudiocode,&nbsp; Gitlab,&nbsp; SqlDeveloper</td>
                   </tr>
                   </tbody>
@@ -295,10 +295,9 @@
                   <tr><td>
                     <ul>
                       <li><strong>개발 인원</strong> : 7명</li>
-                      <li><strong>프로젝트 목표</strong> : GitLab을 사용하여 프로젝트 형상관리 및 협업을 통한 문제해결 및 Jsp / Java / Ajax / Jquery / MVC패턴 숙련</li>
                       <li><strong>공통 역할</strong> : 기획(whimsical) / DB설계(DA#5) / UI설계(figma, bootstrap) / Git형상관리(gitlab)</li>
                       <li><strong>구현 기능</strong><br>- 사용자 : 회원가입 / 로그인 / 마이페이지 / 건의사항 / 자유게시판 / 레시피관리 / 댓글<br>- 관리자 : 로그인 / 회원 관리 / 공지사항 관리/ 건의사항 관리 / 전체 게시글 관리 / 블랙리스트 및 악성유저관리</li>
-                      <li><strong>담당 기능</strong><br>사용자 : 레시피 관리 / 댓글 - 기여도 100%</li>
+                      <li><strong>담당 역할</strong><br>사용자 : 레시피 관리 / 댓글 - 기여도 100%</li>
                     </ul>
                   </td></tr>
 
@@ -326,16 +325,28 @@
                 <table>
                   <tbody>
                   <tr>
-                    <th>방식</th>
-                    <td>Spring-framwork (boot 2.7.3)</td>
-                  </tr>
-                  <tr>
                     <th>언어</th>
-                    <td>Html,&nbsp; Java11,&nbsp; SQL,&nbsp; JavaScript(jquery),&nbsp; MyBatis</td>
+                    <td>Java(11),&nbsp; Html/Css, &nbsp;JavaScript</td>
                   </tr>
                   <tr>
-                    <th>Tools</th>
+                    <th>서버</th>
+                    <td>Apache Tomcat 9.0</td>
+                  </tr>
+                  <tr>
+                    <th>DB</th>
+                    <td>Oracle</td>
+                  </tr>
+                  <tr>
+                    <th>프레임 워크</th>
+                    <td>Spring framework(boot 2.7.3), Mybatis</td>
+                  </tr>
+                  <tr>
+                    <th>IDE</th>
                     <td>IntelliJ,&nbsp; Visualstudiocode,&nbsp; Gitlab,&nbsp; SqlDeveloper</td>
+                  </tr>
+                  <tr>
+                    <th>API</th>
+                    <td>Jquery, Json</td>
                   </tr>
                   </tbody>
                 </table>
@@ -344,11 +355,10 @@
                   <tr><td>
                     <ul>
                       <li><strong>개발 인원</strong> : 6명</li>
-                      <li><strong>프로젝트 목표</strong> : GitLab을 사용하여 프로젝트 형상관리 및 협업을 통한 문제해결 및 Spring boot / Java / Ajax / Jquery / MVC패턴 숙련</li>
                       <li><strong>공통 역할</strong> : 기획(whimsical) / DB설계(DA#5) / UI설계(figma, bootstrap) / Git형상관리(gitlab)</li>
                       <li><strong>구현 기능</strong><br>- 가맹점 : 로그인 / 예치금관리 / 품목관리 / 발주관리 / 입고관리 / 반품관리 / 세금계산서 / 거래명세서 / 1:1 문의사항 <br>- 관리자 : 로그인 / 가맹점관리 / 예치금관리 / 입고관리 / 출고관리 / 반품관리 / 세금계산서 / 거래명세서 / 공지사항 / 1:1 문의사항 / 관리자메뉴</li>
-                      <li><strong>담당 기능</strong><br>가맹점 : 예치금관리 / 1:1 문의 기여도 100%</li>
-                      <li><strong>담당 기능</strong><br>관리자 : 예치금관리 / 1:1 문의 / 공지사항 / 가맹점관리 기여도 100%</li>
+                      <li><strong>담당 역할</strong><br>가맹점 : 예치금관리 / 1:1 문의 기여도 100%</li>
+                      <li><strong>담당 역할</strong><br>관리자 : 예치금관리 / 1:1 문의 / 공지사항 / 가맹점관리 기여도 100%</li>
                     </ul>
                   </td></tr>
 
