1:1문의 상세페이지 text 수정

--- a/index.html
+++ b/index.html
@@ -369,8 +369,10 @@
                 <h5><strong>사용자 주요 기능 ( 2 / 6 )</strong>
                 </h5><br>
                 <p style="font-size: 16px;"><strong>1:1 문의 상세페이지</strong></p>
-                <p style="font-size: 16px;">문의 답변 상태 대기 시 답변 내용이 없고 답변 완료 시 답변 내용이 보이게 만들었습니다</p>
-                <img src="assets/img/user_counsel_detail1.png" alt="" style="width: 1270px; height: 540px;">
+                <p style="font-size: 16px;">문의 답변 상태 대기 시 답변 내용이 없고 답변 완료 시 답변 내용이 보이게 만들었습니다</p><br><br>
+                <p style="font-size: 16px;">- 답변 대기</p><br>
+                <img src="assets/img/user_counsel_detail1.png" alt="" style="width: 1270px; height: 540px;"><br><br>
+                <p style="font-size: 16px;">- 답변 완료</p><br>
                 <img src="assets/img/user_counsel_detail2.png" alt="" style="width: 1270px; height: 540px;">
                 <hr>
                 <h5><strong>사용자 주요 기능 ( 3 / 6 )</strong>
