project 마크업 및 레이아웃 수정

--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
           <h2>Education</h2>
         </div>
         <div class="row">
-          <div class="col-lg-6 aos-init" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">하이미디어 인재개발원</h3>
-            <div class="resume-item">
+          <div class="col-lg-6">
+            <h3 class="resume-title aos-init" data-aos="fade-up" data-aos-delay="100">하이미디어 인재개발원</h3>
+            <div class="resume-item aos-init" data-aos="fade-up" data-aos-delay="100">
               <h4>Back-end Development</h4>
               <h5>2022.05.11 - 2022.09.22</h5>
               <!--              <p><em>Experion, New York, NY </em></p>-->
@@ -225,7 +225,7 @@
                 <li>서버프로그램 구현 : 개발환경 구축하기, 공통 모듈, 서버프로그램 구현하기, 배치 프로그램 구현하기</li>
               </ul>
             </div>
-            <div class="resume-item">
+            <div class="resume-item aos-init" data-aos="fade-up" data-aos-delay="100">
               <h4>Front-end Development</h4>
               <h5>2022.04.06 - 2022.05.10</h5>
               <!--              <p><em>Stepping Stone Advertising, New York, NY</em></p>-->
@@ -257,7 +257,7 @@
             <div class=" col-lg-6 col-md-8 portfolio-item filter-Spring">
               <div class="portfolio-links">
                 <!--              <img src="assets/img/chickenStock_logo.png" alt="">-->
-                <h3 class="aos-init" data-aos="fade-up" data-aos-delay="100">ChickenStock</h3>
+                <h3 class="aos-init" data-aos="fade-up" data-aos-delay="100">CHICKENSTOCK</h3>
                 <p class="aos-init" data-aos="fade-up" data-aos-delay="100">[ 치킨 프랜차이즈 회사 내의 가맹점과 본사의 유통을 간편하고 쉽게 파악할 수
                   있는 프로그램 ]</p>
                 <img src="assets/img/chickenStock.JPG" class="img-fluid aos-init" data-aos="fade-up"
@@ -326,117 +326,93 @@
             </div>
             <div class="col-lg-6 col-md-8 portfolio-item filter-Spring">
               <div class="portfolio-links">
-                <h4>WBS</h4>
+                <h4>1. WBS</h4><br>
                 <div class="xscroll-box"><img src="assets/img/WBS.png"></div>
                 <hr>
-                <h4>USECASE</h4><br>
+
+                <h4>2. USECASE</h4><br>
                 <p><strong>담당 기능</strong> : 예치금관리 / 1:1 문의 / 공지사항 / 가맹점관리</p><br>
                 <div class="xscroll-box"><img src="assets/img/USECASE.png"></div>
                 <hr>
-                <h4>ERD (논리 데이터 베이스 모델)</h4>
+
+                <h4>3. ERD (논리 데이터 베이스 모델)</h4><br>
                 <div class="xscroll-box"><img src="assets/img/ERD.png"></div>
                 <hr>
-                <h4>유저 플로우</h4><br>
+
+                <h4>4. 유저 플로우</h4><br>
                 <p><strong>담당 기능</strong> : 예치금관리 / 1:1 문의 / 공지사항 / 가맹점관리</p><br>
                 <div class="xscroll-box"><img src="assets/img/Whimsical.JPG"></div>
                 <hr>
-                <h4>구현 기능</h4><br>
-                <h5><strong>공통 주요 기능 ( 1 / 3 )</strong></h5><br>
-                <p style="font-size: 16px;"><strong>메인페이지 공지사항 리스트</strong></p>
-                <p style="font-size: 16px;">Ajax를 사용하여 공지사항 글 5개를 출력, +더 보기 클릭 시 공지사항 리스트 페이지로 이동합니다.</p>
-                <img src="assets/img/main_notice.JPG" alt="" style="width: 1270px; height: 540px;">
-                <img src="assets/img/notice_ajax.png" alt="" style="height: 700px;">
-                <hr>
-                <h5><strong>공통 주요 기능 ( 2 / 3 )</strong>
-                </h5><br>
-                <p style="font-size: 16px;"><strong>공지사항 조회</strong></p>
-                <p style="font-size: 16px;">전체 공지사항 글 조회 및 키워드별 검색이 가능하며, 한 페이지당 조회 개수를 6개로 설정하여 초과 시 다음 페이지로 이동하게 만들었고 클릭 시 조회 수가 증가합니다.</p>
-                <img src="assets/img/notice_select.png" alt="" style="width: 1270px; height: 540px;">
-                <img src="assets/img/noticelist.png" alt="" style="width: 1270px; height: 540px;">
-                <hr>
-                <h5><strong>공통 주요 기능 ( 3 / 3 )</strong>
-                </h5><br>
-                <p style="font-size: 16px;"><strong>공지사항 상세페이지</strong></p>
-                <p style="font-size: 16px;">공지사항 상세페이지를 확인할 수 있고, 첨부파일 다운로드가 가능합니다.</p>
-                <img src="assets/img/notice_detail.png" alt="" style="width: 1270px; height: 540px;">
-                <hr>
-                <h5><strong>사용자 주요 기능 ( 1 / 6 )</strong>
-                </h5><br>
-                <p style="font-size: 16px;"><strong>1:1 문의 리스트</strong></p>
-                <p style="font-size: 16px;">본인이 쓴 1:1 문의 리스트를 조회합니다.</p>
-                <img src="assets/img/user_counsel_list.png" alt="" style="width: 1270px; height: 540px;">
-                <hr>
-                <h5><strong>사용자 주요 기능 ( 2 / 6 )</strong>
-                </h5><br>
-                <p style="font-size: 16px;"><strong>1:1 문의 상세페이지</strong></p>
-                <p style="font-size: 16px;">문의 답변 상태 대기 시 답변 내용이 없고 답변 완료 시 답변 내용이 보이게 만들었습니다</p><br><br>
-                <p style="font-size: 16px;">- 답변 대기</p><br>
-                <img src="assets/img/user_counsel_detail1.png" alt="" style="width: 1270px; height: 540px;"><br><br>
-                <p style="font-size: 16px;">- 답변 완료</p><br>
-                <img src="assets/img/user_counsel_detail2.png" alt="" style="width: 1270px; height: 540px;">
-                <hr>
-                <h5><strong>사용자 주요 기능 ( 3 / 6 )</strong>
-                </h5><br>
-                <p style="font-size: 16px;"><strong>가맹점 조회</strong></p>
-                <p style="font-size: 16px;">가맹점은 사내 전체 가맹점 조회가 가능합니다.</p>
-                <img src="assets/img/user_store_list.png" alt="" style="width: 1270px; height: 540px;">
-                <hr>
-                <h5><strong>사용자 주요 기능 ( 4 / 6 )</strong>
-                </h5><br>
-                <p style="font-size: 16px;"><strong>예치금 관리</strong></p>
-                <p style="font-size: 16px;">가맹점은 본인 입출금 내역을 조회할 수 있습니다.</p>
-                <img src="assets/img/user_account.png" alt="" style="width: 1270px; height: 700px;">
-                <hr>
-                <h5><strong>사용자 주요 기능 ( 5 / 6 )</strong>
-                </h5><br>
-                <p style="font-size: 16px;"><strong>예치금 관리</strong></p>
-                <p style="font-size: 16px;">모달창을 사용하여 본사에 입금 신청하여 승인 시 잔액이 충전됩니다.</p>
-                <img src="assets/img/user_account_insert.png" alt="" style="width: 1270px; height: 700px;">
-                <hr>
-                <h5><strong>사용자 주요 기능 ( 6 / 6 )</strong>
-                </h5><br>
-                <p style="font-size: 16px;"><strong>예치금 관리</strong></p>
-                <p style="font-size: 16px;">1. 가맹점은 발주 성공 시 잔액이 출금되는 걸 확인할 수 있습니다.</p>               
-                <img src="assets/img/user_bank.png" alt="" style="width: 1270px; height: 700px;"><br><br><br><br>
+
+                <h4>5. 구현 기능</h4><br>
+                <h5><strong>&middot; [ 메인페이지 공지사항 리스트 ]</strong><span style=""> - 공통 주요 기능 (1/3)</span></h5>
+                <p style="font-size: 16px; padding-left: 10px;">Ajax를 사용하여 공지사항 글 5개를 출력, +더 보기 클릭 시 공지사항 리스트 페이지로 이동합니다.</p><br>
+                <div class="xscroll-box"><img src="assets/img/main_notice.JPG"></div>
+                <div class="xscroll-box"><img src="assets/img/notice_ajax.png"></div>
+
+                <h5 style="padding-top: 80px;"><strong>&middot; [ 공지사항 조회 ]</strong><span style=""> - 공통 주요 기능 (2/3)</span></h5>
+                <p style="font-size: 16px;">전체 공지사항 글 조회 및 키워드별 검색이 가능하며, 한 페이지당 조회 개수를 6개로 설정하여 초과 시 다음 페이지로 이동하게 만들었고 클릭 시 조회 수가 증가합니다.</p><br>
+                <div class="xscroll-box"><img src="assets/img/notice_select.png"></div>
+                <div class="xscroll-box"><img src="assets/img/noticelist.png"></div>
+
+                <h5 style="padding-top: 80px;"><strong>&middot; [ 공지사항 상세페이지 ]</strong><span style=""> - 공통 주요 기능 (3/3)</span></h5>
+                <p style="font-size: 16px;">공지사항 상세페이지를 확인할 수 있고, 첨부파일 다운로드가 가능합니다.</p><br>
+                <div class="xscroll-box"><img src="assets/img/notice_detail.png"></div>
+
+                <h5 style="padding-top: 80px;"><strong>&middot; [ 1:1 문의 리스트 ]</strong><span style=""> - 사용자 주요 기능 (1/6)</span></h5>
+                <p style="font-size: 16px;">본인이 쓴 1:1 문의 리스트를 조회합니다.</p><br>
+                <div class="xscroll-box"><img src="assets/img/user_counsel_list.png"></div>
+
+                <h5 style="padding-top: 80px;"><strong>&middot; [ 1:1 문의 상세페이지 ]</strong><span style=""> - 사용자 주요 기능 (2/6)</span></h5>
+                <p style="font-size: 16px;">문의 답변 상태 대기 시 답변 내용이 없고 답변 완료 시 답변 내용이 보이게 만들었습니다.</p><br>
+                <p style="font-size: 16px;">- 답변 대기</p>
+                <div class="xscroll-box"><img src="assets/img/user_counsel_detail1.png"></div><br><br>
+                <p style="font-size: 16px;">- 답변 완료</p>
+                <div class="xscroll-box"><img src="assets/img/user_counsel_detail2.png"></div>
+
+                <h5 style="padding-top: 80px;"><strong>&middot; [ 가맹점 조회 ]</strong><span style=""> - 사용자 주요 기능 (3/6)</span></h5>
+                <p style="font-size: 16px;">가맹점은 사내 전체 가맹점 조회가 가능합니다.</p><br>
+                <div class="xscroll-box"><img src="assets/img/user_store_list.png"></div>
+
+                <h5 style="padding-top: 80px;"><strong>&middot; [ 예치금 관리 ]</strong><span style=""> - 사용자 주요 기능 (4/6)</span></h5>
+                <p style="font-size: 16px;">가맹점은 본인 입출금 내역을 조회할 수 있습니다.</p><br>
+                <div class="xscroll-box"><img src="assets/img/user_account.png"></div>
+
+                <h5 style="padding-top: 80px;"><strong>&middot; [ 예치금 관리 ]</strong><span style=""> - 사용자 주요 기능 (5/6)</span></h5>
+                <p style="font-size: 16px;">모달창을 사용하여 본사에 입금 신청하여 승인 시 잔액이 충전됩니다.</p><br>
+                <div class="xscroll-box"><img src="assets/img/user_account_insert.png"></div>
+
+                <h5 style="padding-top: 80px;"><strong>&middot; [ 예치금 관리 ]</strong><span style=""> - 사용자 주요 기능 (6/6)</span></h5>
+                <p style="font-size: 16px;">1. 가맹점은 발주 성공 시 잔액이 출금되는 걸 확인할 수 있습니다.</p>
+                <div class="xscroll-box"><img src="assets/img/user_bank.png"></div><br><br>
                 <p style="font-size: 16px;">2. 가맹점은 발주 금액보다 잔액이 부족할 시 입금 신청 페이지로 이동합니다.</p>
-                <img src="assets/img/user_account_fail.png" alt="" style="width: 1270px; height: 500px;">
-                <img src="assets/img/account_bank.png" alt="" style="width: 1270px; height: 500px;">
-                <hr>
-                <h5><strong>관리자 주요 기능 ( 1 / 6 )</strong>
-                </h5><br>
-                <p style="font-size: 16px;"><strong>공지사항 작성</strong></p>
-                <p style="font-size: 16px;">공지사항을 작성할 수 있고 첨부파일 업로드가 가능합니다.</p>
-                <img src="assets/img/admin_notice_insert.png" alt="" style="width: 1270px; height: 700px;">
-                <hr>
-                <h5><strong>관리자 주요 기능 ( 2 / 6 )</strong>
-                </h5><br>
-                <p style="font-size: 16px;"><strong>공지사항 수정 / 삭제</strong></p>
-                <p style="font-size: 16px;">#authentication.getPrincipal()를 사용하여 글 작성한 사람과 로그인한 계정이 동일해야 수정 / 삭제 가능하게 만들었습니다.</p>
-                <img src="assets/img/admin_notice_fn.png" alt="" style="width: 1270px; height: 350px;">
-                <hr>
-                <h5><strong>관리자 주요 기능 ( 3 / 6 )</strong>
-                </h5><br>
-                <p style="font-size: 16px;"><strong>예치금 관리</strong></p>
-                <p style="font-size: 16px;">가맹점에서 입금 신청한 내역을 조회하여 승인 및 반려를 할 수 있고 한 페이지당 조회 개수를 6개로 설정하여 초과 시 다음 페이지로 이동하게 만들었습니다.</p>
-                <img src="assets/img/admin_deposit_list.png" alt="" style="width: 1270px; height: 350px;">
-                <hr>
-                <h5><strong>관리자 주요 기능 ( 4 / 6 )</strong>
-                </h5><br>
-                <p style="font-size: 16px;"><strong>가맹점 등록</strong></p>
-                <p style="font-size: 16px;">관리자는 신규 가맹점을 등록할 수 있고 가맹점의 초기 아이디와 비밀번호를 설정하여 전달해 주며 주소는 카카오 지도 API를 사용하였습니다.</p>
-                <img src="assets/img/admin_store_insert.png" alt="" style="width: 1270px; height: 700px;">
-                <hr>
-                <h5><strong>관리자 주요 기능 ( 5 / 6 )</strong>
-                </h5><br>
-                <p style="font-size: 16px;"><strong>가맹점 정보 수정 및 삭제</strong></p>
-                <p style="font-size: 16px;">관리자는 가맹점 정보를 수정할 수 있고 폐점 시 가맹점 정보를 삭제할 수 있습니다.</p>
-                <img src="assets/img/admin_store_list.png" alt="" style="width: 1270px; height: 700px;">
-                <hr>
-                <h5><strong>관리자 주요 기능 ( 6 / 6 )</strong>
-                </h5><br>
-                <p style="font-size: 16px;"><strong>1:1 문의 답변 등록</strong></p>
-                <p style="font-size: 16px;">관리자는 가맹점이 등록한 1:1문의 리스트를 조회하여 답변을 등록할 수 있습니다.</p>
-                <img src="assets/img/admin_counsel_insert.png" alt="" style="width: 1270px; height: 700px;">
+                <div class="xscroll-box"><img src="assets/img/user_account_fail.png"></div>
+                <div class="xscroll-box"><img src="assets/img/account_bank.png"></div>
+
+                <h5 style="padding-top: 80px;"><strong>&middot; [ 공지사항 작성 ]</strong><span style=""> - 관리자 주요 기능 (1/6)</span></h5>
+                <p style="font-size: 16px;">공지사항을 작성할 수 있고 첨부파일 업로드가 가능합니다.</p><br>
+                <div class="xscroll-box"><img src="assets/img/admin_notice_insert.png"></div>
+
+                <h5 style="padding-top: 80px;"><strong>&middot; [ 공지사항 수정/삭제 ]</strong><span style=""> - 관리자 주요 기능 (2/6)</span></h5>
+                <p style="font-size: 16px;">#authentication.getPrincipal()를 사용하여 글 작성한 사람과 로그인한 계정이 동일해야 수정 / 삭제 가능하게 만들었습니다.</p><br>
+                <div class="xscroll-box"><img src="assets/img/admin_notice_fn.png"></div>
+
+
+                <h5 style="padding-top: 80px;"><strong>&middot; [ 예치금 관리 ]</strong><span style=""> - 관리자 주요 기능 (3/6)</span></h5>
+                <p style="font-size: 16px;">가맹점에서 입금 신청한 내역을 조회하여 승인 및 반려를 할 수 있고 한 페이지당 조회 개수를 6개로 설정하여 초과 시 다음 페이지로 이동하게 만들었습니다.</p><br>
+                <div class="xscroll-box"><img src="assets/img/admin_deposit_list.png"></div>
+
+                <h5 style="padding-top: 80px;"><strong>&middot; [ 가맹점 등록 ]</strong><span style=""> - 관리자 주요 기능 (4/6)</span></h5>
+                <p style="font-size: 16px;">관리자는 신규 가맹점을 등록할 수 있고 가맹점의 초기 아이디와 비밀번호를 설정하여 전달해 주며 주소는 카카오 지도 API를 사용하였습니다.</p><br>
+                <div class="xscroll-box"><img src="assets/img/admin_store_insert.png"></div>
+
+                <h5 style="padding-top: 80px;"><strong>&middot; [ 가맹점 정보 수정/삭제 ]</strong><span style=""> - 관리자 주요 기능 (5/6)</span></h5>
+                <p style="font-size: 16px;">관리자는 가맹점 정보를 수정할 수 있고 폐점 시 가맹점 정보를 삭제할 수 있습니다.</p><br>
+                <div class="xscroll-box"><img src="assets/img/admin_store_list.png"></div>
+
+                <h5 style="padding-top: 80px;"><strong>&middot; [ 1:1 문의 답변 등록 ]</strong><span style=""> - 관리자 주요 기능 (6/6)</span></h5>
+                <p style="font-size: 16px;">관리자는 가맹점이 등록한 1:1문의 리스트를 조회하여 답변을 등록할 수 있습니다.</p><br>
+                <div class="xscroll-box"><img src="assets/img/admin_counsel_insert.png"></div>
                 <hr>
               </div>
             </div>
