--- a/index.html
+++ b/index.html
@@ -253,6 +253,69 @@
 
           <div class="row portfolio-container">
             <!--팀프로젝트-->
+
+            <div class=" col-lg-6 col-md-8 portfolio-item filter-Spring">
+              <div class="portfolio-links">
+                <h3 class="aos-init" data-aos="fade-up" data-aos-delay="100">HOMEBAB</h3>
+                <p class="aos-init" data-aos="fade-up" data-aos-delay="100">[ 사먹는 음식에 질린 홈밥러들에게 레시피를 제공하는 커뮤니티 사이트 ]</p>
+                <img src="assets/img/homebab_main.JPG" class="img-fluid aos-init" data-aos="fade-up"
+                  data-aos-delay="100" alt="">
+                <div class="aos-init" data-aos="fade-up" data-aos-delay="100">
+                  <table>
+                    <tbody>
+                      <tr>
+                        <th>기간</th>
+                        <td>2022.07 ~ 2022.08</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <table>
+                    <tbody>
+                      <tr>
+                        <th>언어</th>
+                        <td>Java(11),&nbsp; Html/Css, &nbsp;JavaScript</td>
+                      </tr>
+                      <tr>
+                        <th>서버</th>
+                        <td>Apache Tomcat 8.5</td>
+                      </tr>
+                      <tr>
+                        <th>DB</th>
+                        <td>Oracle</td>
+                      </tr>
+                      <tr>
+                        <th>프레임 워크</th>
+                        <td>Mybatis</td>
+                      </tr>
+                      <tr>
+                        <th>IDE</th>
+                        <td>Eclipse,&nbsp; Visualstudiocode,&nbsp; Gitlab,&nbsp; SqlDeveloper</td>
+                      </tr>
+                      <tr>
+                        <th>Github</th>
+                        <td><a href="https://github.com/minsukim0743/semi_homebab" target="_blank">https://github.com/minsukim0743/semi_homebab</a></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <table>
+                    <tbody>
+                      <tr>
+                        <td>
+                          <ul>
+                            <li><strong>개발 인원</strong> : 7명</li>
+                            <li><strong>공통 역할</strong> : 기획(whimsical) / DB설계(DA#5) / UI설계(figma, bootstrap) /
+                              Git형상관리(gitlab)</li>
+                            <li><strong>구현 기능</strong><br>- 사용자 : 회원가입 / 로그인 / 마이페이지 / 건의사항 / 자유게시판 / 레시피관리 / 댓글<br>-
+                              관리자 : 로그인 / 회원 관리 / 공지사항 관리/ 건의사항 관리 / 전체 게시글 관리 / 블랙리스트 및 악성유저관리</li>
+                            <li><strong>담당 역할</strong><br>사용자 : 레시피 관리 / 댓글 - 기여도 100%</li>
+                          </ul>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
             
             <div class=" col-lg-6 col-md-8 portfolio-item filter-Spring">
               <div class="portfolio-links">
@@ -314,8 +377,7 @@
                             <li><strong>구현 기능</strong><br>- 가맹점 : 로그인 / 예치금관리 / 품목관리 / 발주관리 / 입고관리 / 반품관리 / 세금계산서 /
                               거래명세서 / 1:1 문의사항 <br>- 관리자 : 로그인 / 가맹점관리 / 예치금관리 / 입고관리 / 출고관리 / 반품관리 / 세금계산서 / 거래명세서 /
                               공지사항 / 1:1 문의사항 / 관리자메뉴</li>
-                            <li><strong>담당 역할</strong><br>가맹점 : 공지사항 / 1:1 문의 / 예치금관리 기여도 100%</li>
-                            <li><strong>담당 역할</strong><br>관리자 : 공지사항 / 1:1문의 / 가맹점관리 기여도 100% / 예치금관리 기여도 70%</li>
+                            <li><strong>담당 역할</strong><br>- 가맹점 : 공지사항 / 1:1 문의 / 예치금관리 기여도 100%<br>- 관리자 : 공지사항 / 1:1문의 / 가맹점관리 기여도 100% / 예치금관리 기여도 70%</li>
                           </ul>
                         </td>
                       </tr>
@@ -411,68 +473,6 @@
                 <p style="font-size: 16px;">관리자는 가맹점이 등록한 1:1문의 리스트를 조회하여 답변을 등록할 수 있습니다.</p><br>
                 <div class="xscroll-box"><img src="assets/img/admin_counsel_insert.png" style="width: 1250px; height: 550px;"></div>
                 <hr>
-              </div>
-            </div>
-            <div class=" col-lg-6 col-md-8 portfolio-item filter-Spring">
-              <div class="portfolio-links">
-                <h3 class="aos-init" data-aos="fade-up" data-aos-delay="100">HOMEBAB</h3>
-                <p class="aos-init" data-aos="fade-up" data-aos-delay="100">[ 사먹는 음식에 질린 홈밥러들에게 레시피를 제공하는 커뮤니티 사이트 ]</p>
-                <img src="assets/img/homebab_main.JPG" class="img-fluid aos-init" data-aos="fade-up"
-                  data-aos-delay="100" alt="">
-                <div class="aos-init" data-aos="fade-up" data-aos-delay="100">
-                  <table>
-                    <tbody>
-                      <tr>
-                        <th>기간</th>
-                        <td>2022.07 ~ 2022.08</td>
-                      </tr>
-                    </tbody>
-                  </table>
-                  <table>
-                    <tbody>
-                      <tr>
-                        <th>언어</th>
-                        <td>Java(11),&nbsp; Html/Css, &nbsp;JavaScript</td>
-                      </tr>
-                      <tr>
-                        <th>서버</th>
-                        <td>Apache Tomcat 8.5</td>
-                      </tr>
-                      <tr>
-                        <th>DB</th>
-                        <td>Oracle</td>
-                      </tr>
-                      <tr>
-                        <th>프레임 워크</th>
-                        <td>Mybatis</td>
-                      </tr>
-                      <tr>
-                        <th>IDE</th>
-                        <td>Eclipse,&nbsp; Visualstudiocode,&nbsp; Gitlab,&nbsp; SqlDeveloper</td>
-                      </tr>
-                      <tr>
-                        <th>Github</th>
-                        <td><a href="https://github.com/minsukim0743/semi_homebab" target="_blank">https://github.com/minsukim0743/semi_homebab</a></td>
-                      </tr>
-                    </tbody>
-                  </table>
-                  <table>
-                    <tbody>
-                      <tr>
-                        <td>
-                          <ul>
-                            <li><strong>개발 인원</strong> : 7명</li>
-                            <li><strong>공통 역할</strong> : 기획(whimsical) / DB설계(DA#5) / UI설계(figma, bootstrap) /
-                              Git형상관리(gitlab)</li>
-                            <li><strong>구현 기능</strong><br>- 사용자 : 회원가입 / 로그인 / 마이페이지 / 건의사항 / 자유게시판 / 레시피관리 / 댓글<br>-
-                              관리자 : 로그인 / 회원 관리 / 공지사항 관리/ 건의사항 관리 / 전체 게시글 관리 / 블랙리스트 및 악성유저관리</li>
-                            <li><strong>담당 역할</strong><br>사용자 : 레시피 관리 / 댓글 - 기여도 100%</li>
-                          </ul>
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
               </div>
             </div>
           </div>
