--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </div>
           </div>
           <div class="col-lg-4 aos-init" data-aos="fade-up" data-aos-delay="100">
-            <h4 class="bi bi-chevron-right" data-aos="fade-up">&nbsp; TOOLS</h4>
+            <h4 class="bi bi-chevron-right" data-aos="fade-up">&nbsp; IDE</h4>
             <div class="progress">
               <span class="skill">IntelliJ <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
@@ -420,7 +420,7 @@
                 <div class="xscroll-box"><img src="assets/img/Whimsical.JPG"></div>
                 <hr>
 
-                <h4>5. 구현 기능</h4><br>
+                <!-- <h4>5. 구현 기능</h4><br>
                 <h5><strong>&middot; [ 메인페이지 공지사항 리스트 ]</strong><span> - 공통 주요 기능 (1/3)</span></h5>
                 <p style="font-size: 16px; padding-left: 10px;">Ajax를 사용하여 공지사항 글 5개를 출력, +더 보기 클릭 시 공지사항 리스트 페이지로
                   이동합니다.</p><br>
@@ -514,7 +514,7 @@
                 <p style="font-size: 16px;">관리자는 가맹점이 등록한 1:1문의 리스트를 조회하여 답변을 등록할 수 있습니다.</p><br>
                 <div class="xscroll-box"><img src="assets/img/admin_counsel_insert.png"
                     style="width: 1250px; height: 550px;"></div>
-                <hr>
+                <hr> -->
               </div>
             </div>
           </div>
